2009-11-05  Simon Hausmann  <hausmann@webkit.org>

        Last Qt 4.5 build fix (*sigh*)

        * tests/qwebpage/tst_qwebpage.cpp:
        (inputMethodHints): inputMethodHints() is only used for 
        Qt 4.6, so guard the whole function.

2009-11-05  Simon Hausmann  <hausmann@webkit.org>

        Another prospective build fix against Qt 4.5 (build bot)

        Don't compile & run the QGraphicsWebView portion of the
        input methods auto test with Qt 4.5.

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods_data):
        (inputMethodHints):
        (inputMethodEnabled):
        (tst_QWebPage::inputMethods):

2009-11-05  Simon Hausmann  <hausmann@webkit.org>

        Prospective build fix against Qt 4.5 (build bot)

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::setInputMethodEnabled): Guard the
        use of Qt 4.6 specific API with #ifdefs.

2009-11-01  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Kenneth Christiansen.

        [Qt] Fix enabling of input method support on QGraphicsWebView.
        https://bugs.webkit.org/show_bug.cgi?id=30605

        Instead of setting the unsupported widget attribute on the
        QGraphicsWidget in setInputMethodEnabled() set the 
        ItemAcceptsInputMethod GraphicsItem flag directly.

        Changed the existing input method auto test to run once
        on a QWebView and once on a QGraphicsWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebViewPrivate::setInputMethodEnabled):
        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::inputMethods_data):
        (inputMethodHints):
        (inputMethodEnabled):
        (tst_QWebPage::inputMethods):

2009-11-04  Simon Hausmann  <hausmann@webkit.org>

        Reviewed by Kenneth Christiansen.

        Added QGraphicsWebView::modified property, for consistency
        with QWebView.

        * Api/qgraphicswebview.cpp:
        (QGraphicsWebView::isModified):